--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,8 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   firebase_core: ^1.12.0
+  firebase_storage: ^10.2.8
+  location: ^4.3.0
 
 dev_dependencies:
   flutter_test:
