--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   firebase_core: ^1.12.0
   firebase_storage: ^10.2.8
   location: ^4.3.0
+  cloud_firestore: ^3.1.10
+  image_picker: ^0.8.4+10
 
 dev_dependencies:
   flutter_test:
