--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,7 +38,9 @@ dependencies:
   firebase_storage: ^10.2.8
   location: ^4.3.0
   cloud_firestore: ^3.1.10
-  image_picker: ^0.8.4+10
+  image_picker: ^0.8.4+9
+  path_provider: ^2.0.9
+  intl: ^0.17.0
 
 dev_dependencies:
   flutter_test:
