--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   image_picker: ^0.8.4+9
   path_provider: ^2.0.9
   intl: ^0.17.0
+  firebase_crashlytics: ^2.5.3
 
 dev_dependencies:
   flutter_test:
